--- a/source-css/cloudchasermotes.css
+++ b/source-css/cloudchasermotes.css
@@ -1,3 +1,44 @@
+a[href|="/ccpose"] {
+display:block;
+clear:none;
+float:left;
+width:140px;
+height:168px;
+background-repeat:no-repeat;
+background-image:url(%%ccpose%%);
+}
+
+a[href|="/ccgiggle"] {
+display:block;
+clear:none;
+float:left;
+width:150px;
+height:150px;
+background-repeat:no-repeat;
+background-image:url(%%ccgiggle%%);
+}
+
+a[href|="/ccpose2"] {
+display:block;
+clear:none;
+float:left;
+width:150px;
+height:165px;
+background-repeat:no-repeat;
+background-image:url(%%ccpose2%%);
+}
+
+
+a[href|="/ccpaper"] {
+display:block;
+clear:none;
+float:left;
+width:150px;
+height:163px;
+background-repeat:no-repeat;
+background-image:url(%%ccpaper%%);
+}
+
 a[href|="/ccdeal"] {
 display:block;
 clear:none;
@@ -50,27 +91,6 @@ background-repeat:no-repeat;
 background-image:url(%%cceww%%);
 }
 
-
-a[href|="/ccpose"] {
-display:block;
-clear:none;
-float:left;
-width:137px;
-height:165px;
-background-repeat:no-repeat;
-background-image:url(%%ccpose%%);
-}
-
-a[href|="/ccgiggle"] {
-display:block;
-clear:none;
-float:left;
-width:125px;
-height:125px;
-background-repeat:no-repeat;
-background-image:url(%%ccgiggle%%);
-}
-
 a[href|="/ccgoon"] {
 display:block;
 clear:none;
@@ -81,3 +101,22 @@ background-repeat:no-repeat;
 background-image:url(%%ccgoon%%);
 }
 
+a[href|="/cccry"] {
+display:block;
+clear:none;
+float:left;
+width:150px;
+height:139px;
+background-repeat:no-repeat;
+background-image:url(%%cccry%%);
+}
+
+a[href|="/ccwat"] {
+display:block;
+clear:none;
+float:left;
+width:92px;
+height:150px;
+background-repeat:no-repeat;
+background-image:url(%%ccwat%%);
+}
