--- a/source-css/ilovedashie.css
+++ b/source-css/ilovedashie.css
@@ -326,104 +326,93 @@ a[href|="/vx60"], a[href|="/dashiegrin"], a[href|="/vx61"], a[href|="/dashietail
     background-repeat: no-repeat;
     background-image: url(%%EmoteSheet1Fixed%%)
     }
-a[href|="/rvx00"], a[href|="/rdashiestrut"],a[href|="/rvx01"], a[href|="/rdashiepose"], a[href|="/rvx02"], a[href|="/rdashiebucket"], a[href|="/rvx10"], a[href|="/rdashiefacehoof"] , a[href|="/rvx11"], a[href|="/rdashieswag"], a[href|="/rvx12"], a[href|="/rdashierage"], a[href|="/rvx20"], a[href|="/rdashiechef"], a[href|="/rvx21"], a[href|="/rdashiepie"], a[href|="/rvx22"], a[href|="/rdashiewedding"], a[href|="/rvx30"], a[href|="/rdashiecunning"], a[href|="/rvx31"], a[href|="/rdashiebunny"], a[href|="/rvx32"], a[href|="/rrainbowpie"],
-a[href|="/rvx40"], a[href|="/rdashiewhat"], a[href|="/rvx41"], a[href|="/rdashiepissed"], a[href|="/rvx42"], a[href|="/rdashiesmile"], 
-a[href|="/rvx50"], a[href|="/rdashiefilly"], a[href|="/rvx51"], a[href|="/rdashieyou"], a[href|="/rvx52"], a[href|="/rdashiehug"], 
-a[href|="/rvx60"], a[href|="/rdashiegrin"], a[href|="/rvx61"], a[href|="/rdashietail"], a[href|="/rvx62"], a[href|="/rdashiepose2"] { 
-    display: block;
-    clear: none;
-    float: left;
-    height: 130px;
-    background-repeat: no-repeat;
-    background-image: url(%%REmoteSheet1Fixed%%)
-    }
-a[href|="/vx00"], a[href|="/dashiestrut"],a[href|="/rvx00"], a[href|="/rdashiestrut"] {
+a[href|="/vx00"], a[href|="/dashiestrut"] {
     width: 161px;
     background-position: -0px -0px
     }
-a[href|="/vx01"], a[href|="/dashiepose"], a[href|="/rvx01"], a[href|="/rdashiepose"]{
+a[href|="/vx01"], a[href|="/dashiepose"]{
     width: 112px;
     background-position: -161px -0px
     }
-a[href|="/vx02"], a[href|="/dashiebucket"], a[href|="/rvx02"], a[href|="/rdashiebucket"]{
+a[href|="/vx02"], a[href|="/dashiebucket"]{
     width: 109px;
     background-position: -273px -0px
     }
-a[href|="/vx10"], a[href|="/dashiefacehoof"], a[href|="/rvx10"], a[href|="/rdashiefacehoof"]{
+a[href|="/vx10"], a[href|="/dashiefacehoof"]{
     width: 137px;
     background-position: -382px -0px
     }
-a[href|="/vx11"], a[href|="/dashieswag"], a[href|="/rvx11"], a[href|="/rdashieswag"]{
+a[href|="/vx11"], a[href|="/dashieswag"]{
     width: 124px;
     background-position: -519px -0px
     }
-a[href|="/vx12"], a[href|="/dashierage"], a[href|="/rvx12"], a[href|="/rdashierage"]{
+a[href|="/vx12"], a[href|="/dashierage"]{
     width: 110px;
     background-position: -643px -0px
     }
-a[href|="/vx20"], a[href|="/dashiechef"], a[href|="/rvx20"], a[href|="/rdashiechef"]{
+a[href|="/vx20"], a[href|="/dashiechef"]{
     width: 112px;
     background-position: -753px -0px
     }
-a[href|="/vx21"], a[href|="/dashiepie"], a[href|="/rvx21"], a[href|="/rdashiepie"]{
+a[href|="/vx21"], a[href|="/dashiepie"]{
     width: 134px;
     background-position: -865px -0px
     }
-a[href|="/vx22"], a[href|="/dashiewedding"], a[href|="/rvx22"], a[href|="/rdashiewedding"]{
+a[href|="/vx22"], a[href|="/dashiewedding"]{
     width: 89px;
     background-position: -999px -0px
     }
-a[href|="/vx30"], a[href|="/dashiecunning"], a[href|="/rvx30"], a[href|="/rdashiecunning"]{
+a[href|="/vx30"], a[href|="/dashiecunning"]{
     width: 93px;
     background-position: -1089px -0px
     }
-a[href|="/vx31"], a[href|="/dashiebunny"], a[href|="/rvx31"], a[href|="/rdashiebunny"]{
+a[href|="/vx31"], a[href|="/dashiebunny"]{
     width: 93px;
     background-position: -1182px -0px
     }
-a[href|="/vx32"], a[href|="/rainbowpie"], a[href|="/rvx32"], a[href|="/rrainbowpie"]{
+a[href|="/vx32"], a[href|="/rainbowpie"]{
     width: 158px;
     background-position: -1275px -0px
     }
-a[href|="/vx40"], a[href|="/dashiewhat"], a[href|="/rvx40"], a[href|="/rdashiewhat"]{
+a[href|="/vx40"], a[href|="/dashiewhat"]{
     width: 109px;
     background-position: -1433px -0px
     }
-a[href|="/vx41"], a[href|="/dashiepissed"], a[href|="/rvx41"], a[href|="/rdashiepissed"]{
+a[href|="/vx41"], a[href|="/dashiepissed"]{
     width: 150px;
     background-position: -1542px -0px
     }
-a[href|="/vx42"], a[href|="/dashiesmile"], a[href|="/rvx42"], a[href|="/rdashiesmile"]{
+a[href|="/vx42"], a[href|="/dashiesmile"]{
     width: 139px;
     background-position: -1692px -0px
     }
-a[href|="/vx50"], a[href|="/dashiefilly"], a[href|="/rvx50"], a[href|="/rdashiefilly"]{
+a[href|="/vx50"], a[href|="/dashiefilly"]{
     width: 91px;
     background-position: -1831px -0px
     }
-a[href|="/vx51"], a[href|="/dashieyou"], a[href|="/rvx51"], a[href|="/rdashieyou"]{
+a[href|="/vx51"], a[href|="/dashieyou"]{
     width: 153px;
     background-position: -1922px -0px
     }
-a[href|="/vx52"], a[href|="/dashiehug"], a[href|="/rvx52"], a[href|="/rdashiehug"]{
+a[href|="/vx52"], a[href|="/dashiehug"]{
     width: 119px;
     background-position: -2075px -0px
     }
-a[href|="/vx60"], a[href|="/dashiegrin"], a[href|="/rvx60"], a[href|="/rdashiegrin"]{
+a[href|="/vx60"], a[href|="/dashiegrin"]{
     width: 140px;
     background-position: -2194px -0px
     }
-a[href|="/vx61"], a[href|="/dashietail"], a[href|="/rvx61"], a[href|="/rdashietail"]{
+a[href|="/vx61"], a[href|="/dashietail"]{
     width: 121px;
     background-position: -2334px -0px
     }
-a[href|="/vx62"], a[href|="/dashiepose2"], a[href|="/rvx62"], a[href|="/rdashiepose2"]{
+a[href|="/vx62"], a[href|="/dashiepose2"]{
     width: 111px;
     background-position: -2455px -0px
     }
 
 
-a[href|="/dashiehelp"] {
+/* a[href|="/dashiehelp"] {
     display: block;
     clear: none;
     float: left;
@@ -432,6 +421,8 @@ a[href|="/dashiehelp"] {
     background-repeat: no-repeat;
     background-image: url(%%dashiehelp%%)
     }
+[](/dashiehelp)|/dashiehelp|[Zpony on Deviantart](http://zpony.deviantart.com/art/RD-Help-356146974)|
+*/
 
 a[href|="/ajhai"], a[href|="/dashieguilt"], a[href|="/dashiehai"], a[href|="/dashienudge"], a[href|="/dashiereading"], a[href|="/dashiescared"], a[href|="/dashieskating"], a[href|="/dashievolunteer"], a[href|="/dashiewince"], a[href|="/dashiespeechless"] {
     display: block;
@@ -439,37 +430,37 @@ a[href|="/ajhai"], a[href|="/dashieguilt"], a[href|="/dashiehai"], a[href|="/das
     float: left;
     height: 130px;
     background-repeat: no-repeat;
-    background-image: url(%%rd-sheet3-v5%%)
+    background-image: url(%%rd-sheet3-v6%%)
 }
 a[href|="/ajhai"]{
 background-position: 0 0; width: 117px; height: 130px;
     }
-a[href|="/dashiehai"]{
-background-position: 0 -180px; width: 104px; height: 130px;
-    }
 a[href|="/dashieguilt"]{
-background-position: 0 -360px; width: 97px; height: 130px; 
+background-position: 0 -180px; width: 97px; height: 130px;
+    }
+a[href|="/dashiehai"]{
+background-position: 0 -360px; width: 104px; height: 130px;
     }
 a[href|="/dashienudge"]{
 background-position: 0 -540px; width: 177px; height: 130px;
     }
 a[href|="/dashiereading"]{
-background-position: 0 -720px; width: 180px; height: 150px;
+background-position: 0 -720px; width: 156px; height: 130px;
     }
 a[href|="/dashiescared"]{
-background-position: 0 -920px; width: 183px; height: 130px; 
+background-position: 0 -900px; width: 183px; height: 130px;
     }
 a[href|="/dashieskating"]{
-background-position: 0 -1100px; width: 114px; height: 130px;
+background-position: 0 -1080px; width: 114px; height: 130px;
     }
 a[href|="/dashiespeechless"]{
-background-position: 0 -1280px; width: 126px; height: 130px; 
+background-position: 0 -1260px; width: 126px; height: 130px; 
     }
 a[href|="/dashievolunteer"]{
-background-position: 0 -1460px; width: 128px; height: 130px; 
+background-position: 0 -1440px; width: 128px; height: 130px; 
     }
 a[href|="/dashiewince"]{
-background-position: 0 -1640px; width: 140px; height: 130px;
+background-position: 0 -1620px; width: 140px; height: 130px;
     }
 
 /***********************
