--- a/source-css/marmemotes.css
+++ b/source-css/marmemotes.css
@@ -1,4 +1,12 @@
 /* animotes */
+a[href|="/keystrokeguitar"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 118px;
+    height: 140px;
+    background-image: url(%%jerickguitar%%)
+    }
 a[href|="/glutes"] {
     display: block;
     clear: none;
@@ -252,7 +260,9 @@ a[href|="/ppmath"],
 a[href|="/derpworst"],
 a[href|="/discordsalute"],
 a[href|="/badassocty"],
-a[href|="/shutupmarm"]
+a[href|="/shutupmarm"],
+a[href|="/badasslyra"],
+a[href|="/twisniper"]
 {
     display: block;
     clear: none;
@@ -324,7 +334,16 @@ a[href|="/shutupmarm"]
     width: 93px;
     background-position: -187px -1400px;
 }
-
+a[href|="/badasslyra"]
+{
+    width: 139px;
+    background-position: -0px -1540px;
+}
+a[href|="/twisniper"]
+{
+    width: 140px;
+    background-position: -139px -1540px;
+}
 /* end sheet 2 */
 
 /* sheet 3 */
@@ -540,3 +559,94 @@ a[href|="/DAAAN"]{
 }
 
 /* end sheet5 */
+
+/* sheet 6 (Jerick) */
+a[href|="/sciencewoona"], 
+a[href|="/actuallydumbrock"], 
+a[href|="/becausescience"], 
+a[href|="/ajcraycray"],
+a[href|="/rarifillyno"],
+a[href|="/rarifillyyay"],
+a[href|="/rarifillyderp"],
+a[href|="/rarifillywhoa"], 
+a[href|="/rarifillywizard"], 
+a[href|="/sciencebitch"],
+a[href|="/cadespont"],
+a[href|="/sciencemoonbutt"],
+a[href|="/rdohyou"]
+{
+    display: block;
+    clear: none;
+    float: left;
+    height: 140px;
+    background-image: url(%%sheet6%%)
+}
+a[href|="/sciencewoona"]
+{
+    width: 188px;
+    background-position: -0px -0px;
+}
+a[href|="/actuallydumbrock"]
+{
+    width: 92px;
+    background-position: -188px -0px;
+}
+a[href|="/becausescience"]
+{
+    width: 280px;
+    height: 117px;
+    background-position: -0px -140px;
+}
+a[href|="/ajcraycray"]
+{
+    width: 135px;
+    background-position: -0px -280px;
+}
+a[href|="/rarifillyno"]
+{
+    width: 140px;
+    background-position: -140px -280px;
+}
+a[href|="/rarifillyyay"]
+{
+    width: 140px;
+    background-position: -0px -420px;
+}
+a[href|="/rarifillyderp"]
+{
+    width: 140px;
+    background-position: -140px -420px;
+}
+a[href|="/rarifillywhoa"]
+{
+    width: 140px;
+    height: 133px;
+    background-position: -0px -560px;
+}
+a[href|="/rarifillywizard"]
+{
+    width: 140px;
+    height: 133px;
+    background-position: -140px -560px;
+}
+a[href|="/sciencebitch"]
+{
+    width: 177px;
+    background-position: -0px -700px;
+}
+a[href|="/cadespont"]
+{
+    width: 103px;
+    background-position: -177px -700px;
+}
+a[href|="/sciencemoonbutt"]
+{
+    width: 280px;
+    background-position: -0px -840px;
+}
+a[href|="/rdohyou"]
+{
+    width: 199px;
+    background-position: -0px -980px;
+}
+/* end sheet 6 */
