--- a/source-css/mylittlealcoholic.css
+++ b/source-css/mylittlealcoholic.css
@@ -334,7 +334,7 @@ body {
 
 /* EMOTES AND SHIT */
 
-a[href|="/gw00"], a[href|="/gw10"], a[href|="/gw01"], a[href|="/gw11"], a[href|="/gw02"], a[href|="/gw12"], a[href|="/gw03"], a[href|="/gw13"], a[href|="/gw04"], a[href|="/gw14"], a[href|="/gw05"], a[href|="/gw15"], a[href|="/gw06"], a[href|="/gw16"], a[href|="/bpangrydrunk"], a[href|="/bpohthesobriety"], a[href|="/bpdrinkwithit"], a[href|="/bpdrinkiepie"] {
+a[href|="/gw00"], a[href|="/gw10"], a[href|="/gw01"],a[href|="/bpdoublehoof"], a[href|="/gw11"], a[href|="/gw02"], a[href|="/gw12"], a[href|="/gw03"], a[href|="/gw13"], a[href|="/gw04"], a[href|="/gw14"], a[href|="/gw05"], a[href|="/gw15"], a[href|="/gw06"], a[href|="/gw16"], a[href|="/bpangrydrunk"], a[href|="/bpohthesobriety"], a[href|="/bpdrinkwithit"], a[href|="/bpdrinkiepie"] {
     display: block;
     clear: none;
     float: left;
@@ -345,7 +345,7 @@ a[href|="/gw00"], a[href|="/gw10"], a[href|="/gw01"], a[href|="/gw11"], a[href|=
 a[href|="/gw00"], a[href|="/adsf"] {
     background-position: -0px -0px
     }
-a[href|="/gw01"], a[href|="/bpangrydrunk"] {
+a[href|="/gw01"], a[href|="/bpdoublehoof"] {
     background-position: -0px -70px
     }
 a[href|="/gw02"], a[href|="/asdf"] {
@@ -363,7 +363,7 @@ a[href|="/gw05"], a[href|="/asdf"] {
 a[href|="/gw06"], a[href|="/bpdrinkwithit"] {
     background-position: -0px -420px
     }                
-a[href|="/gw10"], a[href|="/adsf"] {
+a[href|="/gw10"], a[href|="/bpangrydrunk"] {
     background-position: -70px -0px
     }
 a[href|="/gw11"], a[href|="/asdf"] {
