--- a/source-css/pankakke.css
+++ b/source-css/pankakke.css
@@ -268,7 +268,7 @@ a[href|="/roofies"] {
     background-position: -2106px -0px;
     width: 137px
     }
-a[href|="/nerdychriscandyvan"] {
+a[href|="/nerdychriscandyvan"], a[href|="/yatta!"] {
     display: block;
     clear: none;
     float: left;
@@ -278,6 +278,10 @@ a[href|="/nerdychriscandyvan"] {
 a[href|="/nerdychriscandyvan"] {
     background-position: -0px -0px;
     width: 310px
+    }
+a[href|="/yatta!"] {
+    background-position: -310px -0px;
+    width: 178px
     }
 
 /************MLP-LRG*************/
@@ -402,7 +406,7 @@ a[href|="/theclopping"] {
     }
 
 /***********MLP-XLRG*************/
-a[href|="/fearless"], a[href|="/doctorfun"], a[href|="/nsfz"], a[href|="/notsafeforzealot"], a[href|="/wr3nch"] {
+a[href|="/fearless"], a[href|="/doctorfun"], a[href|="/nsfz"], a[href|="/notsafeforzealot"], a[href|="/wr3nch"], a[href|="/doublevision"] {
      display: block;
      clear: none;
      float: left;
@@ -432,6 +436,11 @@ a[href|="/wr3nch"] {
      background-position: -719px -0px;
      width: 105px;
      height: 350px;
+     }
+a[href|="/doublevision"] {
+     background-position: -824px -0px;
+     width: 194px;
+     height: 250px;
      }
 
 /***********Huge Emotes***********/
