--- a/source-css/falloutequestria.css
+++ b/source-css/falloutequestria.css
@@ -255,7 +255,7 @@ a[href|="/protege"]{ background-position: 0px -517px; width: 82px; height: 150px
 
 a[href|="/wickedslit"]{ background-position: 0px -669px; width: 105px; height: 150px;}
 
-a[href|="/foe21"], a[href|="/lpshrug"]{ background-position: 0px -824px; width: 70px; height: 70px;}
+a[href|="/lpshrug"]{ background-position: 0px -824px; width: 70px; height: 70px;}
 
 a[href|="/grifanywhere"]{ background-position: 0px -900px; width: 103px; height: 150px;}
 
@@ -367,27 +367,29 @@ a[href|="/plotseverywhere"]{ background-position: 0 -1937px; width: 180px; heigh
 a[href|="/psychoshy"]{ background-position: -250px 0; width: 98px; height: 150px;}
 a[href|="/psychoshy"]:hover{background-position: -250px -200px; width: 98px; height: 150px;}
 
-a[href|="/lpmintals"], a[href|="/redeye"], a[href|="/vrcrazy"], a[href|="/mglory"], a[href|="/hiredgun"], a[href|="/bjwindow"], a[href|="/calamityspooky"], a[href|="/murkyinsecure"], a[href|="/bjinabowl"], a[href|="/tapdancingbj"], a[href|="/bjbored"], a[href|="/lpgdi"], a[href|="/bjmanic"]
+a[href|="/lpmintals"], a[href|="/redeye"], a[href|="/vrcrazy"], a[href|="/mglory"], a[href|="/hiredgun"], a[href|="/bjwindow"], a[href|="/calamityspooky"], a[href|="/murkyinsecure"], a[href|="/bjinabowl"], a[href|="/tapdancingbj"], a[href|="/bjbored"], a[href|="/lpgdi"], a[href|="/bjmanic"], a[href|="/twiseal"]
 {
 display: block;
 clear: none;
 float: left;
 background-repeat: no-repeat;
-background-image: url(%%foe-em5-v20%%);
+background-image: url(%%foe-em5-v21%%);
 }
 a[href|="/bjbored"]{background-position: 0 0; width: 70px; height: 70px; }
 a[href|="/bjmanic"]{background-position: 0 -120px; width: 70px; height: 72px; }
 a[href|="/bjinabowl"]{  background-position: 0 -242px; width: 73px; height: 70px; }
 a[href|="/bjwindow"]{ background-position: 0 -362px; width: 96px; height: 100px;}
 a[href|="/calamityspooky"]{ background-position: 0 -512px; width: 129px; height: 100px; }
-a[href|="/hiredgun"]{ background-position: 0 -662px; width: 117px; height: 150px; }
-a[href|="/lpgdi"]{ background-position: 0 -862px; width: 70px; height: 83px; }
-a[href|="/lpmintals"]{background-position: 0 -995px; width: 71px; height: 100px; } 
-a[href|="/mglory"]{ background-position: 0 -1145px; width: 154px; height: 150px; }
-a[href|="/murkyinsecure"]{ background-position: 0 -1345px; width: 81px; height: 100px; }
-a[href|="/redeye"]{  background-position: 0 -1495px; width: 64px; height: 100px; }
-a[href|="/tapdancingbj"]{ background-position: 0 -1645px; width: 127px; height: 150px; }
-a[href|="/vrcrazy"]{ background-position: 0 -1845px; width: 70px; height: 70px; } 
+/*a[href|="/heresy"]{ background-position: 0 -662px; width: 100px; height: 100px;}*/
+a[href|="/hiredgun"]{ background-position: 0 -812px; width: 117px; height: 150px; }
+a[href|="/lpgdi"]{ background-position: 0 -1012px; width: 70px; height: 83px; }
+a[href|="/lpmintals"]{background-position: 0 -1145px; width: 71px; height: 100px; } 
+a[href|="/mglory"]{ background-position: 0 -1295px; width: 154px; height: 150px; }
+a[href|="/murkyinsecure"]{ background-position: 0 -1495px; width: 81px; height: 100px; }
+a[href|="/redeye"]{ background-position: 0 -1645px; width: 64px; height: 100px; }
+a[href|="/tapdancingbj"]{ background-position: 0 -1795px; width: 127px; height: 150px; }
+a[href|="/twiseal"]{ background-position: -204px 0; width: 125px; height: 125px; }
+a[href|="/vrcrazy"]{ background-position: -204px -175px; width: 70px; height: 70px; } 
 
 
 a[href|="/advicebj"]
@@ -497,17 +499,6 @@ background-image: url(%%pinke-v2%%);
 }
 a[href|='/pinke'] {background-position: 0px 0px}
 
-a[href|="/gravityfalls"]
-{
-display: block;
-clear: none;
-float: left;
-width: 171px;
-height: 150px;
-background-repeat: no-repeat;
-background-image: url(%%gravityfalls%%);
-}
-a[href|='/gravityfalls'] {background-position: 0px 0px}
 
 /* Flair */
 
