--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -2,19 +2,19 @@
 
 /* Changes background  */
 body:first-of-type, body.res-nightmode:first-of-type {
-    background:  url(%%ableist%%)  no-repeat  fixed 60% 95% !important;
+    background:  url(%%horselandbg%%)  no-repeat  fixed 60% 95% !important;
 }
 
 /* Banner image and associated height values */
 #header-bottom-left:nth-of-type(n) {
-   background: url(%%meatbannerpony%%);
+   background: url(%%fuckyoucheese2%%);
    background-repeat: no-repeat;
    background-position: 50% 100%;
    height: 237px; /* 237 for meat's nice banner */
 }
 
 #header-img-a {
-    margin-top: 80px;
+    margin-top: 120px;
 }
 
 #header, #header.res-nightmode{
@@ -1114,7 +1114,7 @@ a.author[href$=Catharsis25]:before { content:"Catharsis" }
 a.author[href$=tehz]:before,a.author[href$=tailcalled]:before { content:"Tail Call" }
 a.author[href$=Ruuch]:before { content:"Escort Sluthooves" }
 a.author[href$=herabek]:before {content:"420 BLAZE IT FGT"}
-a.author[href$=OneOfTheseDaysLuna]:before { content:"OneOfTheseFutemotes" }
+a.author[href$=OneOfTheseDaysLuna]:before { content:"OneOfTheseMissingMoonies" }
 a.author[href$=Zovistograt]:before { content:'[](/ww20 “Needy Bitch”)' }
 a.author[href$=ZZW30]:before { content:"CaptChuckles" }
 a.author[href$=JustAnotherGDB]:before { content:"Just Another Face in the Clouds" }
@@ -1259,6 +1259,7 @@ a.author[href$="Swiftskii"]:after { content:" Be careful what you wish for" }
 
 
 /* Any pre/post-name flair stuff goes here */ 
+.tagline a.author[href$="/Indubitableness"]:before,
 .tagline a.author[href$="/RainbowCrash"]:before,
 .tagline a.author[href$="/245001"]:before,
 .tagline a.author[href$="/Orschmann"]:before,
@@ -1282,6 +1283,7 @@ a.author[href$="Swiftskii"]:after { content:" Be careful what you wish for" }
 }
 
 /* Flour sack flair for anyone we've noticed that has flair disabled. Don't forget to add them above too.*/ 
+.tagline a.author[href$="/Indubitableness"]:before,
 .tagline a.author[href$="/EvanMacIan"]:before,
 .tagline a.author[href$="/RainbowCrash"]:before,
 .tagline a.author[href$="/245001"]:before
