Stylesheet/emote/tag updates 2013-03-12

--- a/source-css/anotherponymotessub.css
+++ b/source-css/anotherponymotessub.css
@@ -57,3 +57,74 @@ Width: 70px;
 Height: 70px;
 background-image: url(%%pinkiestars%%) !important
 }
+
+a[href="/twiwonder"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 167px;
+Height: 197px;
+background-image: url(%%twiwonder%%) !important
+}
+
+a[href="/dashlook"] {
+background-position: 0px -3px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 121px;
+Height: 89px;
+background-image: url(%%dashlook%%) !important
+}
+
+a[href="/twilook"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 139px;
+Height: 107px;
+background-image: url(%%twilook%%) !important
+}
+
+a[href="/dashlook2"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 270px;
+Height: 212px;
+background-image: url(%%dashlook2%%) !important
+}
+
+/* a[href="/improvement"] { */
+/* background-position: 0px 0px; */
+/* Display: block; */
+/* Clear: none; */
+/* Float: left; */
+/* Width: 300px; */
+/* Height: 169px; */
+/* background-image: url(%%dashtwilick%%) !important */
+/* } */
+/* Figure out how to do this later. */
+
+a[href="/discordbutler"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 150px;
+Height: 222px;
+background-image: url(%%discordbutler%%) !important
+}
+
+a[href="/discord10"] {
+background-position: 0px 0px;
+Display: block;
+Clear: none;
+Float: left;
+Width: 400px;
+Height: 222px;
+background-image: url(%%discord10%%) !important
+}
