--- a/source-css/falloutequestria.css
+++ b/source-css/falloutequestria.css
@@ -373,23 +373,22 @@ display: block;
 clear: none;
 float: left;
 background-repeat: no-repeat;
-background-image: url(%%foe-em5-v21%%);
+background-image: url(%%foe-em5-v23%%);
 }
 a[href|="/bjbored"]{background-position: 0 0; width: 70px; height: 70px; }
-a[href|="/bjmanic"]{background-position: 0 -120px; width: 70px; height: 72px; }
-a[href|="/bjinabowl"]{  background-position: 0 -242px; width: 73px; height: 70px; }
+a[href|="/bjinabowl"]{ background-position: 0 -120px; width: 73px; height: 70px; }
+a[href|="/bjmanic"]{background-position: 0 -240px; width: 70px; height: 72px; }
 a[href|="/bjwindow"]{ background-position: 0 -362px; width: 96px; height: 100px;}
 a[href|="/calamityspooky"]{ background-position: 0 -512px; width: 129px; height: 100px; }
-/*a[href|="/heresy"]{ background-position: 0 -662px; width: 100px; height: 100px;}*/
-a[href|="/hiredgun"]{ background-position: 0 -812px; width: 117px; height: 150px; }
-a[href|="/lpgdi"]{ background-position: 0 -1012px; width: 70px; height: 83px; }
-a[href|="/lpmintals"]{background-position: 0 -1145px; width: 71px; height: 100px; } 
-a[href|="/mglory"]{ background-position: 0 -1295px; width: 154px; height: 150px; }
-a[href|="/murkyinsecure"]{ background-position: 0 -1495px; width: 81px; height: 100px; }
-a[href|="/redeye"]{ background-position: 0 -1645px; width: 64px; height: 100px; }
-a[href|="/tapdancingbj"]{ background-position: 0 -1795px; width: 127px; height: 150px; }
-a[href|="/twiseal"]{ background-position: -204px 0; width: 125px; height: 125px; }
-a[href|="/vrcrazy"]{ background-position: -204px -175px; width: 70px; height: 70px; } 
+a[href|="/hiredgun"]{ background-position: 0 -662px; width: 117px; height: 150px; }
+a[href|="/lpgdi"]{ background-position: 0 -862px; width: 70px; height: 83px; }
+a[href|="/lpmintals"]{background-position: 0 -995px; width: 71px; height: 100px; } 
+a[href|="/mglory"]{ background-position: 0 -1145px; width: 154px; height: 150px; }
+a[href|="/murkyinsecure"]{ background-position: 0 -1345px; width: 81px; height: 100px; }
+a[href|="/redeye"]{background-position: 0 -1495px; width: 65px; height: 100px; }
+a[href|="/tapdancingbj"]{ background-position: 0 -1645px; width: 127px; height: 150px; }
+a[href|="/twiseal"]{ background-position: 0 -1845px; width: 133px; height: 150px; }
+a[href|="/vrcrazy"]{ background-position: -204px 0; width: 70px; height: 70px; } 
 
 
 a[href|="/advicebj"]
