--- a/source-css/flutterlounge.css
+++ b/source-css/flutterlounge.css
@@ -192,7 +192,7 @@ a[href|="/flutterheart"]  {
     background-position: -1011px -0px 
     }
 /* HOLY SHEET MORE EMOTES */
-a[href|="/loveyou"], a[href|="/fluttershylovesyou"], a[href|="/loveyou"], a[href|="/fluttertine"], a[href|="/shytine"], a[href|="/rarityshynibble"], a[href|="/earnibble"] {
+a[href|="/loveyou"], a[href|="/fluttershylovesyou"], a[href|="/loveyou"], a[href|="/fluttertine"], a[href|="/shytine"], a[href|="/rarityshynibble"], a[href|="/earnibble"], a[href|="/cuteflutter"], a[href|="/animuflutter"], a[href|="/cloudbutt"], a[href|="/flutterbutt"], a[href|="/imsorry"], a[href|="/ididntmeanit"] {
 
     display: block;
     clear: none;
@@ -212,6 +212,19 @@ a[href|="/rarityshynibble"], a[href|="/earnibble"] {
     width: 220px;
     background-position: -306px -0px 
     }
+a[href|="/imsorry"], a[href|="/ididntmeanit"] {
+    width: 266px;
+    background-position: -526px -0px 
+    }
+a[href|="/cloudbutt"], a[href|="/flutterbutt"] {
+    width: 236px;
+    background-position: -792px -0px 
+    }
+a[href|="/cuteflutter"], a[href|="/animuflutter"] {
+    width: 293px;
+    background-position: -1028px -0px 
+    }
+
 /* SNUGGLES */
 a[href|="/shydashiesnuggle"], a[href|="/shydashsnuggle"], a[href|="/flutterdashsnuggle"], a[href|="/shyhuggle"], a[href|="/flutterhuggle"] {
 
