--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -36,7 +36,7 @@ div.titlebox .users-online span.number:after {content:" not really caring"}
 {
  color:gray!important;
  font-size:13px!important;
- content:"CUTIE MOD CRUSADERS";
+ content:"THE A-TEAM";
  display:inline-block
 }
 
@@ -205,7 +205,7 @@ h3.imgTitle{
  z-index:999
 }
 body{background:url(%%scoots-bg%%) no-repeat fixed center center!important}
-.res-nightmode .content{background-color:transparent!important}
+.res-nightmode .content{background-color:transparent !important}
 .res-nightmode{background-color:transparent !important}
 .content .md h1{color:#789922;border-bottom:none;padding-bottom:0px}
 .content .md h1:before{content:">"}
@@ -882,3 +882,4 @@ body:lang(np):not(.subscriber) #siteTable:before{content:"You have been linked t
 body:lang(np):not(.subscriber) .entry.likes:not(.reddit-entry):before,body:lang(np):not(.subscriber) .entry.dislikes:not(.reddit-entry):before{content:"Please do not vote or comment when you come from external subreddits.";color:red;font-size:large;font-weight:700}
 body.res:lang(np):not(.subscriber) div.titlebox > div[style*='display: block !important'] input:before,body.res:lang(np):not(.subscriber) div.titlebox > div[style*='display: block !important'] label:before,body.res:lang(np):not(.subscriber) > div#keyCommandLineWidget > form:before{content:'Removed by NoParticipation'!important;margin-left:-10000px!important}
 body:lang(np):not(.subscriber) .usertext-edit,body:lang(np):not(.subscriber) .sidebox.submit,body:lang(np):not(.subscriber) .commentingAs,body:lang(np):not(.subscriber) .markdownEditor,body:lang(np):not(.subscriber) .report-button,body:lang(np):not(.subscriber) a[onclick*="return reply(this)"],body:lang(np):not(.subscriber) .subButtons,body:lang(np):not(.subscriber) .helplink,body:lang(np):not(.subscriber) .titlebox .fancy-toggle-button.toggle > .option.add,body.wiki-page:lang(np):not(.subscriber) span.pageactions a.wikiaction-edit:not(.wikiaction-current),body.wiki-page:lang(np):not(.subscriber) div.wiki-page-content form#editform label[for=reason],body.wiki-page:lang(np):not(.subscriber) div.wiki-page-content form#editform input#wiki_revision_reason,body.wiki-page:lang(np):not(.subscriber) div.wiki-page-content form#editform input[type=submit]{display:none!important}
+
