--- a/source-css/mylittlensfw.css
+++ b/source-css/mylittlensfw.css
@@ -66,6 +66,7 @@ a[href|="/vinylshake"]{background-image:url(%%vinylshake%%);clear:none;display:b
 a[href|="/rvinylshake"]{background-image:url(%%rvinylshake%%);clear:none;display:block;float:left;height:142px;width:200px}
 a[href|="/derpyshake"]{background-image:url(%%derpyshake%%);clear:none;display:block;float:right;height:142px;width:200px}
 a[href|="/orschemote"]{background-image:url(%%orschemote%%);clear:none;display:block;float:left;height:400px;width:300px}
+a[href|="/buzzkillturtle"],a[href|="/horseporn"]{background-image:url(%%buzzkilltutle%%);clear:none;display:block;float:left;height:511px;width:621px}
 
 /*== Username Modifications ==*/
 a.author[href$="CatmanIX"] {
