--- a/source-css/mylittlewtf.css
+++ b/source-css/mylittlewtf.css
@@ -2172,3 +2172,27 @@ a[href|='/trixpoker'] {
     height: 145px;
     background-position: -2px -731px
     }
+a[href="/raeptime"] {
+   display: block;
+    clear: none;
+    float: left; 
+    width: 422px;
+    height: 473px;
+background-image: url(%%stache%%)
+}
+
+a[href="/raeptime"] {
+background-position: -0px -0px !important;
+    }
+a[href="/drama"] {
+   display: block;
+    clear: none;
+    float: left; 
+    width: 443px;
+    height: 298px;
+background-image: url(%%drama%%)
+}
+
+a[href="/drama"] {
+background-position: -0px -0px !important;
+    }
